--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,17 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+.idea
+.DS_Store
+.AppleDouble
+.LSOverride
+
+*.sublime-project
+*.sublime-workspace
+
+.vscode/
+*.code-workspace
+
 # C extensions
 *.so
 
