--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-#new
 name: Django-app workflow
 
 on: [push]
@@ -21,5 +20,8 @@ jobs:
         pip install -r requirements.txt 
 
     - name: Test with flake8 and django tests
-      run:
-        python -m flake8 
+      run: |
+        python -m flake8
+        cd infra_project/
+        python manage.py test
+ 
